--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "yaml": "^2.1.3"
   },
   "dependencies": {
     "pngjs": "^6.0.0"
