--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ stages:
 
 sast:
   stage: test
+
 include:
   - template: Security/SAST.gitlab-ci.yml
 
@@ -25,11 +26,28 @@ print-info:
     - 'echo "Commit Author: $CI_COMMIT_AUTHOR"'
     - 'echo "Commit digest: $CI_COMMIT_SHORT_SHA"'
 
-test:
-  stage: test
+build:
+  stage: build
   image: node:18.12-alpine3.15
   script:
     - npm ci
     - npm run lint
     - npm run format
+    # - npm run test
+
+test:
+  stage: test
+  image: node:18.12-alpine3.15
+  script:
+    # - npm ci
+    # - npm run lint
+    # - npm run format
     - npm run test
+# int:
+#   stage: int
+#   image: node:18.12-alpine3.15
+#   script:
+#     - npm ci
+#     - npm run lint
+#     - npm run format
+#     - npm publish
