--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,10 +5,13 @@
 # Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
 # Note that environment variables can be set in several places
 # See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
+image: node:18.12-alpine3.15
+
 stages:
   - setup
   - build
   - test
+  - deploy
 
 sast:
   stage: test
@@ -31,7 +34,6 @@ build:
   stage: build
   artifacts:
     untracked: true
-  image: node:18.12-alpine3.15
   script:
     - npm ci
     - npm run lint
@@ -44,11 +46,9 @@ test:
   image: node:18.12-alpine3.15
   script:
     - npm run test
-# int:
-#   stage: int
-#   image: node:18.12-alpine3.15
-#   script:
-#     - npm ci
-#     - npm run lint
-#     - npm run format
-#     - npm publish
+
+deploy:
+  stage: deploy
+  script:
+    - echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc
+    - npm publish
