--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "Steganography",
     "steganography",
     "LSB",
-    "Lower Significant Bit",
+    "Least Significant Bit",
     "Conceal",
     "Hide",
     "PNG"
