--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,13 +53,14 @@ test:
 
 deploy:
   stage: deploy
-  # only:
-  #   - master
-  rules:
-    - if: $(npm show steganojs version) == $(node -p "require('./package.json').version")
+  only:
+    - master
+  # rules:
+  #   - if: $(npm show steganojs version) == $(node -p "require('./package.json').version")
   script:
     - echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc
-    - npm publish
+    - if [ $(npm show steganojs version) == $(node -p "require('./package.json').version") ]; then npm publish; fi
+    # - npm publish
 
 test-staging:
   stage: staging
